# Friction

./: .gitignore  CMakeLists.txt  FrictionConfig.cmake.in  LICENSE  README.md
docs/: FrictionHLD.md
include/: LockFreeQueue.hpp
tests/: CMakeLists.txt
