# Tests for Friction

# Option to download/fetch testing dependencies
include(FetchContent)

# Example: Using Google Test
# FetchContent_Declare(
#     googletest
#     GIT_REPOSITORY https://github.com/google/googletest.git
#     GIT_TAG v1.13.0
# )
# FetchContent_MakeAvailable(googletest)

# Add your test executables here
# add_executable(friction_tests test_lock_free_queue.cpp)
# target_link_libraries(friction_tests PRIVATE Friction gtest_main)
# add_test(NAME FrictionTests COMMAND friction_tests)
